# django-girls

./: pyproject.toml
blog/: models.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: post_list.html
django_girls/: settings.py  urls.py
