[tool.poetry]
name = "django-girls"
version = "0.1.0"
description = ""
authors = ["Francesca Colombo <sichel07@gmail.com>"]
readme = "README.md"
packages = [{include = "django_girls"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
